tests/NormalTests/paczka1/fuzzy1/48557277.err
Error in line 16: QDqIeTr7cW S201 7,8
Error in line 2: A19 S35 10,1
Error in line 25: goa S35 38,9
